# scorpio

./: .gitignore  AGENTS.md  AUTHORS.md  CMakeLists.txt  CTestConfig.cmake  CTestScript.cmake  LICENSE  README.md  ibv_devinfo.txt  test_openmpi.193176.out  test_openmpi.195239.out  test_openmpi.195609.out  test_openmpi.195610.out  test_openmpi.195611.out  test_openmpi.195622.out  test_openmpi.195628.out  test_openmpi.195638.out  test_openmpi.195640.out  test_openmpi.195680.out  test_openmpi.195718.out
cmake/: CheckIsContiguous.f90  CheckNC4ChunkConsts.f90  FindGPTL.cmake  FindHDF5.cmake  FindLIBLOWFIVE.cmake  FindMPE.cmake  FindMPISERIAL.cmake  FindNetCDF.cmake  FindPnetCDF.cmake  LibCheck.cmake  LibFind.cmake  LibMPI.cmake  SPIOCompressionUtils.cmake  SPIOTypeUtils.cmake  SPIOUtils.cmake  (+3 more)
examples/: CMakeLists.txt
examples/adios/: CMakeLists.txt  example3.c  example_num_frames.c  timesteps.c  timesteps_double.c
examples/basic/: CMakeLists.txt  alloc_mod.F90.in  check_mod.F90  gdecomp_mod.F90  namelist_mod.F90  testpio.F90  utils_mod.F90
examples/c/: CMakeLists.txt  darray_async.c  darray_no_async.c  example1.c  example2.c  examplePio.c  netcdf4p.c  put_var.c  test_adios.c  test_hdf5.c
examples/cxx/: CMakeLists.txt  e3sm_f.cpp  e3sm_fgi.cpp  e3sm_fgi_data.hpp  e3sm_fgi_utils.hpp  e3sm_g.cpp  e3sm_i.cpp  hdf5.cpp
examples/f03/: CMakeLists.txt  examplePio.f90
src/: CMakeLists.txt
src/clib/: CMakeLists.txt  README_pio_async_write.txt  bget.c  bget.cpp  config.h.in  io_perf_summary.json_expected  io_perf_summary.text_expected  io_perf_summary.xml_expected  pio.h  pio_api.h  pio_api_impl.h  pio_async_mtq.hpp  pio_async_thread.cpp  pio_async_thread.h  pio_async_tpool.cpp  pio_async_tpool.hpp  pio_async_utils.cpp  pio_bget_utils.cpp  pio_bget_utils.h  pio_bget_utils.hpp  pio_config.h.in  pio_darray.c  pio_darray.cpp  pio_darray_int.c  pio_darray_int.cpp  pio_file.c  pio_file.cpp  pio_get_nc.c  pio_getput_int.c  pio_getput_int.cpp  pio_internal.h  pio_lists.c  pio_lists.cpp  pio_minmax.h  pio_mpi_timer.cpp  pio_msg.c  pio_msg.cpp  pio_nc.c  pio_nc.cpp  pio_nc4.c  (+68 more)
src/clib/api/: CMakeLists.txt  spio_ddata_api.cpp  spio_dim_api.cpp  spio_err_api.cpp  spio_file_api.cpp  spio_file_md_api.cpp  spio_get_att_api.cpp  spio_get_utils.cpp  spio_get_utils.hpp  spio_get_var1_api.cpp  spio_get_var_api.cpp  spio_get_vara_api.cpp  spio_get_varm_api.cpp  spio_get_vars_api.cpp  spio_io_decomp_api.cpp  spio_io_sys_api.cpp  spio_lib_api.cpp  spio_misc_att_api.cpp  spio_misc_var_api.cpp  spio_put_att_api.cpp  spio_put_var1_api.cpp  spio_put_var_api.cpp  spio_put_vara_api.cpp  spio_put_varm_api.cpp  spio_put_vars_api.cpp
src/clib/core/: CMakeLists.txt  README_trace_and_replay.txt  io_perf_summary.schema.json  pio_darray.cpp  pio_darray_int.cpp  pio_file.cpp  pio_get_nc.cpp  pio_getput_int.cpp  pio_lists.cpp  pio_msg.cpp  pio_nc.cpp  pio_nc4.cpp  pio_put_nc.cpp  pio_sdecomps_regex.hpp  pio_spmd.cpp  pioc.cpp  pioc_sc.cpp  pioc_support.cpp  spio_async_hdf5_utils.cpp  spio_async_op.hpp  spio_async_tcomm.hpp  spio_async_tpool.cpp  spio_async_tpool.hpp  spio_io_summary.h  spio_iodesc_utils.cpp
src/clib/core/iolib/: CMakeLists.txt
src/clib/core/iolib/hdf5/: CMakeLists.txt  spio_async_hdf5_utils.cpp  spio_async_hdf5_utils.hpp  spio_hdf5_utils.cpp  spio_hdf5_utils.hpp
src/clib/core/progress_engine/: CMakeLists.txt  spio_async_tcomm.cpp  spio_async_tcomm.hpp  spio_async_tpool.cpp  spio_async_tpool.hpp  spio_async_utils.cpp  spio_async_utils.hpp
src/clib/core/rearr/: CMakeLists.txt  pio_rearr_contig.cpp  pio_rearr_utils.cpp  pio_rearrange.cpp
src/clib/core/util/: CMakeLists.txt  pio_lists.cpp  pio_sdecomps_regex.cpp  pio_sdecomps_regex.hpp  spio_decomp_logger.hpp  spio_decomp_txt_logger.cpp  spio_file_mvcache.h  spio_io_summary.cpp
src/clib/util/: CMakeLists.txt  bget.cpp  bget.h  pio_timer.cpp  spio_dbg_utils.hpp  spio_dt_converter.cpp  spio_dt_converter.hpp  spio_gptl_utils.hpp  spio_hash.cpp  spio_logger.hpp  spio_ltimer.cpp  spio_ltimer.h  spio_ltimer.hpp  spio_sort_utils.hpp  spio_tracer.cpp  spio_tracer_decomp.cpp  spio_tracer_mdata.cpp  spio_tracer_mdata.hpp  topology.cpp
src/flib/: CMakeLists.txt  pio.F90  pio_kinds.F90.in  pio_nf.F90  pio_nf_utils.F90  pio_types.F90  piodarray.F90.in  piolib_mod.F90  pionfatt_mod.F90.in  pionfget_mod.F90.in  pionfput_mod.F90.in  spio_darray.F90.in  spio_darray_cint.F90.in  spio_decomp.F90.in  spio_decomp_cint.F90  spio_def_dim.F90  spio_def_dim_cint.F90  spio_def_file.F90  spio_def_file_cint.F90  spio_def_var.F90  spio_def_var_cint.F90  spio_err.F90  spio_err_cint.F90  spio_file.F90  spio_file_cint.F90  spio_get_att.F90.in  spio_get_att_cint.F90.in  spio_get_var.F90.in  spio_get_var_cint.F90.in  spio_init.F90  spio_init_cint.F90  spio_inq_att.F90  spio_inq_att_cint.F90  spio_inq_dim.F90  spio_inq_dim_cint.F90  spio_inq_file.F90  spio_inq_file_cint.F90  spio_inq_var.F90  spio_inq_var_cint.F90  spio_misc.F90  (+10 more)
src/flib_legacy/: CMakeLists.txt  pio.F90  pio_types.F90  piodarray.F90.in  piolib_mod.F90  pionfget_mod.F90.in  pionfput_mod.F90.in
src/genf90/: genf90.pl
src/gptl/: CMakeLists.txt  gptl.c  gptl.h  perf_utils.F90  private.h
tests/performance/: CMakeLists.txt  README_parse_decomp_info_py.txt  README_pioperformance_rearr.txt  parse_decomp_info.py  pioperformance.F90  pioperformance_asyncthread.F90  pioperformance_rearr.F90
tests/pnetcdf/: CMakeLists.txt  test_pnetcdf.c  test_pnetcdf_4d.cpp
tools/: CMakeLists.txt
tools/adios2pio-nm/: CMakeLists.txt  README_conversion_tool.txt  adios2pio-nm-lib-c.h  adios2pio-nm-lib.cxx  adios2pio-nm-lib.h  adios2pio-nm.cxx
tools/replay/: spio_iosys.py  spio_replay.py  spio_replay_tool_builder.py  spio_trace_log_parser.py  spio_trace_log_transform.py  spio_trace_mdata_parser.py  spio_vm.py
tools/replay/src_templates/: CMakeLists.txt  driver_template.cpp  driver_template.hpp  iosys_trace_template.cpp  iosys_trace_template.hpp
tools/spio_finfo/: CMakeLists.txt  spio_file_test_utils.h  spio_finfo.h  spio_finfo_tool.cxx
tools/util/: argparser.h  spio_lib_info.h  spio_misc_tool_utils.h
(+1355 files in other folders)
